# vault

./: .gitignore  CLOUDFLARE_COMPARISON.md  COLOR_PALETTE_GUIDE.md  DESIGN_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  RAG_CHANGES.md  RAG_DOCS_INDEX.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_INTEGRATION_GUIDE.md  RAG_QUICKSTART.md  README_RAG.md  README_UI_REDESIGN.md  UI_REDESIGN_COMPLETE.md  UI_REDESIGN_SUMMARY.md
vault/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEV_MODE.md  Dockerfile  Dockerfile.debug  Dockerfile.dev  Jenkinsfile  MIGRATION_GUIDE.md  Makefile  QUICK_DEV_REFERENCE.md  QUICK_START_UV.md  RAG_PERFORMANCE.md  README.md  README1.md  UV_INSTALLATION_GUIDE.md  UV_PYTHON_3.14_SUMMARY.txt  auth_service_complete.py  build.xml  deploy.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  dockerignore  env.example  fix.sh  fix_all_imports.py  fix_all_imports.sh  k8s-deployment.yaml  k8s-migration-job.yaml  main.py  main.py.4jan.bak  main.py.backup  main.py.bak  pyproject.toml  quickstart.sh  requirements.txt  simple_backend.py  (+5 more)
vault/alembic/: env.py
vault/alembic/versions/: 002_create_auth_users.py  0c2e168a6d1c_initial_schema.py  0fff0536d5d5_create_all_remaining_tables.py  20dea5eb9afb_updated_sessions_and_questions_again_3.py  259ab818c55c_initial_schema.py  32ee2324d901_initial_schema.py  37bcd40aa0a0_added_project_model.py  398f5837f248_add_knowledghe_base_stuff.py  47708068ce1a_initial_schema.py  4a079dbfcb67_updated_document_with_author_and_.py  56f08f7ee28f_added_validator.py  5a03a1ace78d_create_projects_table.py  64e9188c73f7_updated_sessions_and_questions.py  73d120954acd_add_vector_indexes.py  7b0217d22da7_updated_sessions_and_questions_again.py  857920179707_initial_schema.py  8d76deb7cbb3_initial_schema.py  8fb698c314e7_initial_schema_with_auth_users.py  a270b72a64df_updated_sessions_and_questions_again_4.py  b576626af99f_updated_sessions_and_questions_again_2.py  b905a850c6f2_updated_document_with_author_and_.py  e039944678ca_add_kb_documents_table_for_rag.py  e5fd4fb1f2f8_change_chatmessagescollector_messages_.py
vault/app/: Dockerfile.dev  cache.py  cache.py.backup_20251231_172940  chat.py  chat.py.backup_20251231_172940  chat.py.bak  config.py  config.py.backup_20251231_172940  connection_manager.py  connection_manager.py.backup_20251231_172940  console_management.py  console_management.py.backup_20251231_172940  database.py  document.py  document.py.backup_20251231_172940  email_service.py  email_service.py.backup_20251231_172940  email_utils.py  email_utils.py.backup_20251231_172940  feedback.py  feedback.py.backup_20251231_172940  hico_collector.py  hico_collector.py.backup_20251231_172940  hico_helper.py  hico_helper.py.backup_20251231_172940  logger_config.py  logger_config.py.backup_20251231_172940  shared_utils.py  shared_utils.py.backup_20251231_172940  state_manager.py  test_server.py  test_server.py.backup_20251231_172940  ui_handlers.py  ui_handlers.py.backup_20251231_172940  utils.py  utils.py.backup_20251231_172940
vault/app/api/: __init__.py  admin.py  auth.py  auth.py.backup_20251231_172940  collector.py  expert.py  (+14 more)
vault/kb_docs/: financial_policy.txt  legal_audit.txt
vault/qdrant_storage/: raft_state.json
vault/scripts/: find_supabase_calls.py
vault/supabase/: config.toml  seed.sql
vault/vault-ui/: index.html  package-lock.json  package.json
(+1595 files in other folders)
