[project]
name = "hico-vault-backend"
version = "2.0.0"
description = "Local-first Vault backend (pgvector + Ollama + Supabase-local JWT auth)"
requires-python = "==3.14"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.2",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.41",
  "psycopg>=3.0.0",
  "pgvector>=0.2.5",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "ollama>=0.4.4",
  # Supabase (local GoTrue + PostgREST)
  "supabase>=2.15.1",
  # JWT verification for local GoTrue HS256
  "PyJWT>=2.10.1",
  # Ingestion helpers (local)
  "PyPDF2>=3.0.1",
  "python-docx>=1.1.2",
  "docx2python>=3.3.0",
  "regex>=2024.5.15",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
