[project]
name = "vault"
version = "2.0.0"
description = " Vault - Knowledge Management System with Ollama + Qdrant"
authors = [
    {name = " Group", email = "support@-group.com"}
]
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}

dependencies = [
    # FastAPI and Web Framework
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "starlette>=0.37.2",
    # Database and Vector Store
    "sqlalchemy>=2.0.41",
    "psycopg>=3.2.1",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "qdrant-client>=1.11.3",
    # Supabase (Local)
    "supabase>=2.15.1",
    "gotrue>=2.10.2",
    # LLM and Embeddings (Ollama)
    "ollama>=0.4.4",
    "requests>=2.32.3",
    "httpx>=0.27.2",
    # Data Processing
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "docx2python>=3.3.0",
    # Authentication
    "PyJWT>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    # Machine Learning
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    # Text Processing
    "regex>=2024.11.6",
    "langchain>=0.3.7",
    "langchain-text-splitters>=0.3.2",
    "langchain-community>=0.3.7",
    # Utilities
    "aiofiles>=24.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-ldap>=3.4.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# THIS IS THE FIX - Tell hatchling where your code is!
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py314"]
